# nobleo-pre-commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  README.md  bitbucket-pipelines.yml  bumpver.toml  nobleo-hooks.yaml  pyproject.toml  run-nobleo-hooks
.github/workflows/: deploy-docker.yml  pre-commit.yml
pre_commit_hooks/: __init__.py  verify_bumpver.py  verify_launch_depends.py  verify_xml_schema.py
