# Copyright (C) 2025 Nobleo Autonomous Solutions B.V.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nobleo-pre-commit"
version = "26.7.0"
description = "Pre-commit hooks for Nobleo"
dependencies = ["bumpver", "click", "xmlschema"]

[project.scripts]
verify-bumpver = "pre_commit_hooks.verify_bumpver:main"
verify-launch-depends = "pre_commit_hooks.verify_launch_depends:main"
verify-xml-schema = "pre_commit_hooks.verify_xml_schema:main"
